--- a/.github/workflows/image_app.yml
+++ b/.github/workflows/image_app.yml
@@ -26,6 +26,10 @@ on:
 env:
   FLAVOR_PREFIX: ${{ inputs.flavor && format('{0}-', inputs.flavor) || '' }}
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   build-app:
     name: Build App Image
@@ -59,7 +63,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_ACCESS_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
         uses: docker/build-push-action@v6
