--- a/build
+++ b/build
@@ -28,7 +28,7 @@ function help() {
   echo
   echo "Options:"
   echo "  -p, --platform    : The platform (default: system architecture)"
-  echo "  -r, --repository  : The repository prefix (default: ghcr.io/m1k1o/neko)"
+  echo "  -r, --repository  : The repository prefix (default: ghcr.io/cryptic-stack/ocatl-neko)"
   echo "  -t, --tag         : The image tag, can be specified multiple times, if not specified"
   echo "                      uses 'latest' and if available, current git semver tag (v*.*.*)"
   echo "  -f, --flavor      : The flavor, if not specified, builds without flavor"
@@ -42,7 +42,7 @@ function help() {
   echo "Positional arguments:"
   echo "  <image>           : The image name, if not specified, uses the full image name"
   echo "                      in the format <repository>/<flavor>-<application>:<tag>"
-  echo "                      Example: ghcr.io/m1k1o/neko/nvidia-firefox:latest"
+  echo "                      Example: ghcr.io/cryptic-stack/ocatl-neko/nvidia-firefox:latest"
   echo "                      You can override any of the above options by specifying them"
   echo "                      after the image name."
   echo
@@ -52,7 +52,7 @@ function help() {
   echo "  CLIENT_DIST       : The client dist file to use, if not specified, builds them"
   echo "                      from the source code."
   echo "  (options)         : Options can be specified as environment variables, for example:"
-  echo "                      PLATFORM=linux/arm64 $0 --repository ghcr.io/m1k1o/neko"
+  echo "                      PLATFORM=linux/arm64 $0 --repository ghcr.io/cryptic-stack/ocatl-neko"
 }
 
 FULL_IMAGE=""
@@ -75,9 +75,9 @@ while [[ "$#" -gt 0 ]]; do
 
         # extracts image, flavor, app and tag from the full image name
         # example:
-        #  ghcr.io/m1k1o/neko/nvidia-firefox:latest
+        #  ghcr.io/cryptic-stack/ocatl-neko/nvidia-firefox:latest
         # will be split into:
-        #   REPOSITORY=ghcr.io/m1k1o/neko
+        #   REPOSITORY=ghcr.io/cryptic-stack/ocatl-neko
         #   FLAVOR=nvidia
         #   APPLICATION=firefox
         #   TAG=latest
@@ -88,12 +88,12 @@ while [[ "$#" -gt 0 ]]; do
           TAG="${FULL_IMAGE##*:}" # will be latest
           TAGS+=("$TAG")
           # removes everything after the last :
-          FULL_IMAGE="${FULL_IMAGE%:*}" # will be ghcr.io/m1k1o/neko/nvidia-firefox
+          FULL_IMAGE="${FULL_IMAGE%:*}" # will be ghcr.io/cryptic-stack/ocatl-neko/nvidia-firefox
         fi
         # extract the image name and save the rest to REPOSITORY
         if [[ "$FULL_IMAGE" == *"/"* ]]; then
           # removes everything after the last /
-          REPOSITORY="${FULL_IMAGE%/*}" # will be ghcr.io/m1k1o/neko
+          REPOSITORY="${FULL_IMAGE%/*}" # will be ghcr.io/cryptic-stack/ocatl-neko
           # removes everything before the last /
           FULL_IMAGE="${FULL_IMAGE##*/}" # will be nvidia-firefox
         fi
@@ -226,7 +226,7 @@ fi
 log "Using platform: $PLATFORM"
 
 if [ -z "$REPOSITORY" ]; then
-  REPOSITORY="ghcr.io/m1k1o/neko"
+  REPOSITORY="ghcr.io/cryptic-stack/ocatl-neko"
 fi
 log "Using repository: $REPOSITORY"
 
