--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -29,7 +29,7 @@ jobs:
     #
     # do not run on forks
     #
-    if: github.repository_owner == 'cryptic-stack' && secrets.DOCKER_TOKEN != ''
+    if: github.repository_owner == 'cryptic-stack' && vars.ENABLE_DOCKERHUB == 'true'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -72,7 +72,7 @@ jobs:
     #
     # do not run on forks
     #
-    if: github.repository_owner == 'cryptic-stack' && secrets.DOCKER_TOKEN != ''
+    if: github.repository_owner == 'cryptic-stack' && vars.ENABLE_DOCKERHUB == 'true'
     needs: build-base
     strategy:
       # Will build all images even if some fail.
