feat(app): add xfce-netbird image and publish workflows

--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -104,6 +104,7 @@ jobs:
           - remmina
           - vlc
           - xfce
+          - xfce-netbird
           - kde
     steps:
       - name: Checkout
@@ -200,6 +201,7 @@ jobs:
           - remmina
           - vlc
           - xfce
+          - xfce-netbird
           - kde
     steps:
       - name: Checkout
