--- a/apps/kde/Dockerfile
+++ b/apps/kde/Dockerfile
@@ -7,8 +7,8 @@ RUN set -eux; apt-get update; \
     apt-get install -y --no-install-recommends kde-full kwin-x11 sudo; \
     #
     # add user to sudoers
-    usermod -aG sudo neko; \
-    echo "neko:neko" | chpasswd; \
+    usermod -aG sudo octal; \
+    echo "octal:octal" | chpasswd; \
     echo "%sudo ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers; \
     # clean up
     apt remove xserver-xorg-legacy -y; \
@@ -17,8 +17,8 @@ RUN set -eux; apt-get update; \
 
 #
 # disable autolock
-RUN kwriteconfig5 --file /home/neko/.config/kscreenlockerrc --group Daemon --key Autolock false; \
-    chown neko:neko /home/neko/.config/kscreenlockerrc
+RUN kwriteconfig5 --file /home/octal/.config/kscreenlockerrc --group Daemon --key Autolock false; \
+    chown octal:octal /home/octal/.config/kscreenlockerrc
 
 #
 # copy configuation files
