--- a/apps/tor-browser/Dockerfile
+++ b/apps/tor-browser/Dockerfile
@@ -12,7 +12,7 @@ RUN set -eux; apt-get update; \
 	curl -sSL -o /tmp/tor.tar.xz "https://www.torproject.org/$DOWNLOAD_URI"; \
     tar -xvJf /tmp/tor.tar.xz -C /opt; \
     mv /opt/tor-browser* /opt/tor-browser_en-US; \
-    chown -R neko:neko /opt/tor-browser_en-US/; \
+    chown -R octal:octal /opt/tor-browser_en-US/; \
     rm -f /tmp/tor.tar.xz; \
     #
     # clean up
