--- a/runtime/supervisord.conf
+++ b/runtime/supervisord.conf
@@ -47,7 +47,7 @@ redirect_stderr=true
 [unix_http_server]
 file=/var/run/supervisor.sock
 chmod=0770
-chown=root:neko
+chown=root:octal
 
 [supervisorctl]
 serverurl=unix:///var/run/supervisor.sock
