--- a/Dockerfile.linux
+++ b/Dockerfile.linux
@@ -81,7 +81,7 @@ RUN set -eux; \
     make -j$(nproc); \
     make install;
 
-# build custom input driver
+#Â build custom input driver
 RUN set -eux; \
     cd xf86-input-neko; \
     ./autogen.sh --prefix=/usr; \
@@ -96,7 +96,7 @@ FROM $RUNTIME_BASE_IMAGE AS runtime
 
 #
 # set custom user
-ARG USERNAME=neko 
+ARG USERNAME=octal 
 ARG USER_UID=1000 
 ARG USER_GID=$USER_UID 
 
@@ -170,7 +170,7 @@ RUN set -eux; \
 
 #
 # copy runtime configs
-COPY --chown=neko:neko runtime/.Xresources /home/$USERNAME/.Xresources
+COPY --chown=octal:octal runtime/.Xresources /home/$USERNAME/.Xresources
 COPY runtime/dbus /usr/bin/dbus
 COPY runtime/default.pa /etc/pulse/default.pa
 COPY runtime/supervisord.conf /etc/neko/supervisord.conf
@@ -179,7 +179,7 @@ COPY runtime/xorg.conf /etc/neko/xorg.conf
 
 #
 # copy runtime folders
-COPY --chown=neko:neko runtime/icon-theme /home/$USERNAME/.icons/default
+COPY --chown=octal:octal runtime/icon-theme /home/$USERNAME/.icons/default
 COPY runtime/fontconfig/* /etc/fonts/conf.d/
 COPY runtime/fonts /usr/local/share/fonts
 
