--- a/apps/microsoft-edge/Dockerfile
+++ b/apps/microsoft-edge/Dockerfile
@@ -19,7 +19,7 @@ RUN set -eux; apt-get update; \
 #
 # copy configuation files
 COPY supervisord.conf /etc/neko/supervisord/microsoft-edge.conf
-COPY --chown=neko preferences.json /home/neko/.config/microsoft-edge/Default/Preferences
+COPY --chown=octal preferences.json /home/octal/.config/microsoft-edge/Default/Preferences
 COPY policies.json /etc/opt/edge/policies/managed/policies.json
 COPY openbox.xml /etc/neko/openbox.xml
 
