--- a/apps/xfce-netbird/Dockerfile
+++ b/apps/xfce-netbird/Dockerfile
@@ -12,8 +12,8 @@ RUN set -eux; apt-get update; \
     apt-get install -y --no-install-recommends netbird; \
     #
     # add user to sudoers
-    usermod -aG sudo neko; \
-    echo "neko:neko" | chpasswd; \
+    usermod -aG sudo octal; \
+    echo "octal:octal" | chpasswd; \
     echo "%sudo ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers; \
     # clean up
     apt-get clean -y; \
