--- a/runtime/Dockerfile.bookworm
+++ b/runtime/Dockerfile.bookworm
@@ -3,7 +3,7 @@ FROM $BASE_IMAGE AS runtime
 
 #
 # set custom user
-ARG USERNAME=neko
+ARG USERNAME=octal
 ARG USER_UID=1000
 ARG USER_GID=$USER_UID
 
@@ -72,7 +72,7 @@ RUN set -eux; \
 
 #
 # copy runtime configs
-COPY --chown=neko:neko .Xresources /home/$USERNAME/.Xresources
+COPY --chown=octal:octal .Xresources /home/$USERNAME/.Xresources
 COPY dbus /usr/bin/dbus
 COPY default.pa /etc/pulse/default.pa
 COPY supervisord.conf /etc/neko/supervisord.conf
@@ -81,7 +81,7 @@ COPY xorg.conf /etc/neko/xorg.conf
 
 #
 # copy runtime folders
-COPY --chown=neko:neko icon-theme /home/$USERNAME/.icons/default
+COPY --chown=octal:octal icon-theme /home/$USERNAME/.icons/default
 COPY fontconfig/* /etc/fonts/conf.d/
 COPY fonts /usr/local/share/fonts
 
