--- a/runtime/Dockerfile.nvidia
+++ b/runtime/Dockerfile.nvidia
@@ -71,7 +71,7 @@ ENV VGL_DISPLAY=egl
 
 #
 # set custom user
-ARG USERNAME=neko
+ARG USERNAME=octal
 ARG USER_UID=1000
 ARG USER_GID=$USER_UID
 
@@ -224,7 +224,7 @@ RUN apt-get -o Acquire::Retries=5 update; \
 
 #
 # copy runtime configs
-COPY --chown=neko:neko .Xresources /home/$USERNAME/.Xresources
+COPY --chown=octal:octal .Xresources /home/$USERNAME/.Xresources
 COPY dbus /usr/bin/dbus
 COPY default.pa /etc/pulse/default.pa
 COPY supervisord.conf /etc/neko/supervisord.conf
@@ -234,7 +234,7 @@ COPY nvidia/entrypoint.sh /bin/entrypoint.sh
 
 #
 # copy runtime folders
-COPY --chown=neko:neko icon-theme /home/$USERNAME/.icons/default
+COPY --chown=octal:octal icon-theme /home/$USERNAME/.icons/default
 COPY fontconfig/* /etc/fonts/conf.d/
 COPY fonts /usr/local/share/fonts
 
