--- a/server/dev/runtime/config.yml
+++ b/server/dev/runtime/config.yml
@@ -113,7 +113,7 @@ member:
   #         can_see_inactive_cursors: false
   # provider: "file"
   # file:
-  #   path: "/home/neko/members.json"
+  #   path: "/home/octal/members.json"
   provider: "multiuser"
   multiuser:
    admin_password: "admin"
