refactor(apps): remove m1k1o refs and replace remaining app branding strings

--- a/apps/chromium/Dockerfile
+++ b/apps/chromium/Dockerfile
@@ -4,7 +4,7 @@ FROM $BASE_IMAGE
 COPY ./widevinecdm.sh /widevine.sh
 
 #
-# install neko chromium
+# install octal chromium
 RUN set -eux; \
     echo "deb http://ftp.de.debian.org/debian bookworm main" >> /etc/apt/sources.list; \
     apt-get update; \
